# Terrarium

./: .gitignore  CMakeLists.txt  CMakePresets.json
CLI_Planning/: CMakeLists.txt
CLI_Planning/analyze/facet/: index.md  summary.md  types.md
CLI_Planning/analyze/html/: index.html
CLI_Planning/analyze/markdown/: ARCHITECTURE.md
CLI_Planning/code-design/01-requirements/: 2026-05-25-2326-checklist.md  handoff.md
CLI_Planning/code-design/02-design/: 2026-05-31-1940-checklist.md  handoff.md
CLI_Planning/code-design/02-design/archive/: handoff-2026-06-09-0935.md
CLI_Planning/code-design/02-design/flows/: 02-todo-done-interactive.md  03-show-dashboard.md
CLI_Planning/observation/: smoke_test.cpp
CLI_Planning/observation/climate/: render_default_config_test.cpp
CLI_Planning/observation/leaves/: cli_format_test.cpp
CLI_Planning/observation/roots/: sqlite_event_repository_test.cpp  sqlite_goal_repository_test.cpp
CLI_Planning/observation/seed/: event_test.cpp  time_range_test.cpp
CLI_Planning/observation/stem/: add_todo_usecase_test.cpp  create_event_usecase_test.cpp  delete_event_usecase_test.cpp  delete_todo_usecase_test.cpp  list_events_usecase_test.cpp  list_goals_usecase_test.cpp  list_todos_usecase_test.cpp  mark_todo_done_usecase_test.cpp  show_dashboard_usecase_test.cpp  show_goal_usecase_test.cpp  update_event_usecase_test.cpp  update_goal_usecase_test.cpp  update_todo_usecase_test.cpp
CLI_Planning/observation/support/: fakes.hpp
CLI_Planning/seasons/: 001_init.sql
CLI_Planning/src/climate/: DefaultConfig.cpp  DefaultConfig.hpp  TomlConfigLoader.cpp  TomlConfigLoader.hpp
CLI_Planning/src/glass/: main.cpp
CLI_Planning/src/leaves/: CliConflictPrompter.cpp  CliFormat.cpp  CliFormat.hpp
CLI_Planning/src/rings/: SpdlogLogger.cpp  SpdlogLogger.hpp
CLI_Planning/src/roots/: MigrationRunner.hpp  SqliteEventRepository.cpp  SqliteEventRepository.hpp  SqliteGoalRepository.cpp  SqliteTodoRepository.cpp
CLI_Planning/src/seed/: ConflictDetector.hpp  Goal.cpp  Goal.hpp  Priority.hpp  RecurrenceRule.hpp  StdUuidGenerator.hpp  TimeRange.cpp  Todo.cpp
CLI_Planning/src/stem/: AddTodoUseCase.cpp  AddTodoUseCase.hpp  CreateGoalUseCase.hpp  DeleteEventUseCase.hpp  DeleteTodoUseCase.cpp  ListEventsUseCase.cpp  ListEventsUseCase.hpp  ListGoalsUseCase.cpp  ListGoalsUseCase.hpp  ListTodosUseCase.cpp  ListTodosUseCase.hpp  LogGoalUseCase.hpp  MarkTodoDoneUseCase.cpp  MarkTodoDoneUseCase.hpp  ShowDashboardUseCase.cpp  ShowGoalUseCase.cpp  UpdateEventUseCase.cpp  UpdateEventUseCase.hpp  UpdateGoalUseCase.cpp  UpdateGoalUseCase.hpp  UpdateTodoUseCase.hpp
CLI_Planning/src/stem/commands/: DashboardCommands.hpp  EventCommands.hpp  GoalCommands.hpp  TodoCommands.hpp
CLI_Planning/src/stomata/: ConfigLoader.hpp  ConflictPrompter.hpp  EventRepository.hpp  Logger.hpp  TodoRepository.hpp
orchard/CLI_Planning/: .gitignore  CMakeLists.txt
orchard/CLI_Planning/analyze/facet/: architecture.md  callgraph-cpp.md  externals.md  flow.md
orchard/CLI_Planning/code-design/02-design/: 2026-06-09-2033-checklist.md  qa-checklist.md
orchard/CLI_Planning/code-design/02-design/flows/: 01-event-add-with-conflict.md  99-error-handling.md
orchard/CLI_Planning/observation/climate/: render_default_config_test.cpp  toml_config_loader_test.cpp
orchard/CLI_Planning/observation/leaves/: cli_conflict_prompter_test.cpp  cli_format_test.cpp
orchard/CLI_Planning/observation/rings/: spdlog_logger_test.cpp
orchard/CLI_Planning/observation/roots/: migration_runner_test.cpp  sqlite_event_repository_test.cpp  sqlite_goal_repository_test.cpp  sqlite_todo_repository_test.cpp
orchard/CLI_Planning/observation/seed/: conflict_detector_test.cpp  goal_test.cpp  todo_test.cpp
orchard/CLI_Planning/observation/stem/: create_goal_usecase_test.cpp  delete_goal_usecase_test.cpp  log_goal_usecase_test.cpp  update_event_usecase_test.cpp  update_todo_usecase_test.cpp
orchard/CLI_Planning/observation/support/: fakes.hpp  sqlite_test_db.hpp
orchard/CLI_Planning/observation/toolshed/log/: spdlog_logger_test.cpp
orchard/CLI_Planning/observation/toolshed/sqlite/: database_test.cpp  migration_runner_test.cpp
orchard/CLI_Planning/observation/trunk/domain/: conflict_detector_test.cpp  event_test.cpp  goal_test.cpp  time_range_test.cpp  todo_test.cpp
orchard/CLI_Planning/observation/trunk/usecase/: add_todo_usecase_test.cpp  create_event_usecase_test.cpp  create_goal_usecase_test.cpp  delete_event_usecase_test.cpp  delete_goal_usecase_test.cpp  delete_todo_usecase_test.cpp  list_events_usecase_test.cpp  list_goals_usecase_test.cpp  list_todos_usecase_test.cpp  log_goal_usecase_test.cpp  mark_todo_done_usecase_test.cpp  show_dashboard_usecase_test.cpp  show_goal_usecase_test.cpp  update_event_usecase_test.cpp  update_goal_usecase_test.cpp  (+1 more)
orchard/CLI_Planning/src/climate/: DefaultConfig.cpp  DefaultConfig.hpp  TomlConfigLoader.cpp  TomlConfigLoader.hpp
orchard/CLI_Planning/src/glass/: main.cpp
orchard/CLI_Planning/src/leaves/: CliConflictPrompter.cpp  CliConflictPrompter.hpp  CliFormat.cpp  CliFormat.hpp  TuiApp.cpp  TuiApp.hpp
orchard/CLI_Planning/src/rings/: SpdlogLogger.hpp
orchard/CLI_Planning/src/roots/: MigrationRunner.cpp  SqliteEventRepository.cpp  SqliteEventRepository.hpp  SqliteGoalRepository.cpp  SqliteGoalRepository.hpp  SqliteTodoRepository.cpp  SqliteTodoRepository.hpp
orchard/CLI_Planning/src/seed/: ConflictDetector.cpp  Event.cpp  Event.hpp  Goal.cpp  IdGenerator.hpp  StdUuidGenerator.cpp  Todo.hpp
orchard/CLI_Planning/src/stem/: CreateEventUseCase.cpp  CreateEventUseCase.hpp  CreateGoalUseCase.cpp  DeleteEventUseCase.cpp  DeleteGoalUseCase.cpp  DeleteGoalUseCase.hpp  DeleteTodoUseCase.hpp  LogGoalUseCase.cpp  ShowDashboardUseCase.cpp  ShowDashboardUseCase.hpp  ShowGoalUseCase.hpp  UpdateTodoUseCase.cpp
orchard/CLI_Planning/src/stomata/: EventRepository.hpp  GoalRepository.hpp
toolshed/log/: CMakeLists.txt  Config.hpp  Logger.hpp  SpdlogLogger.cpp  SpdlogLogger.hpp
toolshed/sqlite/: CMakeLists.txt  Database.cpp  Database.hpp  MigrationRunner.cpp  MigrationRunner.hpp
(+53 files in other folders)
